# Casil

./: .gitignore  .gitmodules  CMakeLists.txt  CONTRIBUTORS  README  README.md  SourceFiles.cmake  runCppcheck.sh
casil/: asio.cpp  asio.h  assert.cpp  auxil.cpp  auxil.h  bytes.cpp  bytes.h  concepts.h  contextuallogger.cpp  contextuallogger.h  device.cpp  device.h  env.cpp  env.h  layerbase.cpp  layerbase.h  layerconfig.cpp  layerconfig.h  layerfactory.cpp  layerfactory.h  layerfactorymacros.h  logger.cpp  logger.h  templatedevice.h  templatedevicemacros.h  version.cpp  version.h
casil/HL/: directdriver.cpp  directdriver.h  driver.cpp  driver.h  muxeddriver.cpp  muxeddriver.h  registerdriver.cpp  registerdriver.h
casil/HL/Direct/: dummydriver.cpp  dummydriver.h  scpi.cpp  scpi.h  virtecho.cpp  virtecho.h
casil/HL/Muxed/: dummymuxeddriver.cpp  dummymuxeddriver.h  gpio.cpp  gpio.h  sitcpfifo.cpp  sitcpfifo.h
casil/RL/: dummyregister.cpp  dummyregister.h  register.cpp  register.h  standardregister.cpp  standardregister.h
casil/TL/: directinterface.cpp  directinterface.h  interface.cpp  interface.h  muxedinterface.cpp  muxedinterface.h
casil/TL/CommonImpl/: asiohelper.cpp  asiohelper.h  serialportwrapper.cpp  serialportwrapper.h  tcpsocketwrapper.cpp  tcpsocketwrapper.h  udpsocketwrapper.cpp  udpsocketwrapper.h
casil/TL/Direct/: dummyinterface.cpp  dummyinterface.h  serial.cpp  serial.h  tcp.cpp  tcp.h  udp.cpp  udp.h
casil/TL/Muxed/: dummymuxedinterface.cpp  dummymuxedinterface.h  sitcp.cpp  sitcp.h
doc/casil/: Doxyfile.in
doc/casil/template/: footer.html  header.html  main_page.cpp
example/casil/: main.cpp
example/pycasil/: example.py
misc/: basil_licence_notice_patch.yaml
pycasil/: asio_py.cpp  assert_py.cpp  auxil_py.cpp  bytes_py.cpp  contextuallogger_py.cpp  device_py.cpp  env_py.cpp  layerbase_py.cpp  layerconfig_py.cpp  layerfactory_py.cpp  logger_py.cpp  pycasil.cpp  pycasil.h  pycasil_utils.cpp  pycasil_utils.h  version_py.cpp
pycasil/HL/: directdriver_py.cpp  driver_py.cpp  hl.cpp  muxeddriver_py.cpp  registerdriver_py.cpp
pycasil/HL/Direct/: dummydriver_py.cpp  scpi_py.cpp  virtecho_py.cpp
pycasil/HL/Muxed/: dummymuxeddriver_py.cpp  gpio_py.cpp  sitcpfifo_py.cpp
pycasil/RL/: dummyregister_py.cpp  register_py.cpp  rl.cpp  standardregister_py.cpp
pycasil/TL/: directinterface_py.cpp  interface_py.cpp  muxedinterface_py.cpp  tl.cpp
pycasil/TL/CommonImpl/: asiohelper_py.cpp  serialportwrapper_py.cpp  tcpsocketwrapper_py.cpp  udpsocketwrapper_py.cpp
pycasil/TL/Direct/: dummyinterface_py.cpp  serial_py.cpp  tcp_py.cpp  udp_py.cpp
pycasil/TL/Muxed/: dummymuxedinterface_py.cpp  sitcp_py.cpp
tests/stand-alone/casil/: datadirfixture.h  tests.cpp
tests/stand-alone/casil/components/HL/test_gpio/: test_gpio.cpp
tests/stand-alone/casil/components/HL/test_registerdriver/: fakeinterface.cpp  fakeinterface.h  invalidregdriver.cpp  invalidregdriver.h  test_registerdriver.cpp  testregdriver.cpp  testregdriver.h
tests/stand-alone/casil/components/HL/test_scpi/: test_scpi.cpp
tests/stand-alone/casil/components/RL/test_standardregister/: test_standardregister.cpp  testreadbackdriver.cpp  testreadbackdriver.h
tests/stand-alone/casil/components/TL/test_tcp/: test_tcp.cpp
tests/stand-alone/casil/components/TL/test_udp/: test_udp.cpp
tests/stand-alone/casil/core/test_asio/: test_asio.cpp
tests/stand-alone/casil/core/test_auxil/: bdaq53.yaml  bdaq53_ref.txt  test_auxil.cpp
tests/stand-alone/casil/core/test_bytes/: test_bytes.cpp
tests/stand-alone/casil/core/test_contextuallogger/: loggingdriver.cpp  loggingdriver.h  test_contextuallogger.cpp
tests/stand-alone/casil/core/test_device/: rtconfdriver.cpp  rtconfdriver.h  test_device.cpp
tests/stand-alone/casil/core/test_layerbase/: layertestclass.cpp  layertestclass.h  rtconftestclass.cpp  rtconftestclass.h  test_layerbase.cpp
tests/stand-alone/casil/core/test_layerconfig/: test_layerconfig.cpp
tests/stand-alone/casil/core/test_layerfactory/: test_layerfactory.cpp
tests/stand-alone/casil/core/test_layerpolymorphism/: test_layerpolymorphism.cpp  testdrivermuxed.cpp  testdrivermuxed.h  testinterface.cpp  testinterface.h  wrongregister.cpp  wrongregister.h
tests/stand-alone/casil/core/test_logger/: test_logger.cpp
tests/stand-alone/casil/core/test_templatedevice/: exampledevice.h  test_templatedevice.cpp  testdriver.cpp  testdriver.h
tests/stand-alone/casil/core/test_templatedevicemacros/: test_templatedevicemacros.cpp
